--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,40 @@
 :root {
     font-family: 'Roboto Mono', monospace;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: gray;
+    color: white;
+    height: 100lvh;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    margin-bottom: 2em;
+}
+
+.mainGrid {
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0, 200px));
+    grid-auto-rows: min-content;
+    gap: 0.5em;
+}
+
+.bingoBox {
+    background-color: #2a3333;
+    border: 2px solid white;
+    height: 200px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
